// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AloitusKuulutus should create and manipulate projekti successfully 1`] = `
Object {
  "aloitusKuulutus": Object {
    "esitettavatYhteystiedot": Array [
      Object {
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
    },
    "kuulutusPaiva": "2022-01-02",
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": undefined,
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 2`] = `
Object {
  "aloitusKuulutus": Object {
    "esitettavatYhteystiedot": Array [
      Object {
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
    },
    "kuulutusPaiva": "2022-01-02",
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta RUOTSIKSI.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/T412 Aloituskuulutus RUOTSIKSI.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "email": "Joku.Jossain@vayla.fi",
        "etunimi": "Joku",
        "kunta": "Nokia",
        "puhelinnumero": "123",
        "sukunimi": "Jossain",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "velho": Object {
        "asiatunnusVayla": "A1",
        "kunnat": Array [
          "Tampere",
          "Nokia",
        ],
        "maakunnat": Array [
          "Uusimaa",
          "Pirkanmaa",
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 3`] = `
Object {
  "aloitusKuulutus": Object {
    "esitettavatYhteystiedot": Array [
      Object {
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
    },
    "kuulutusPaiva": "2022-01-02",
    "palautusSyy": "Korjaa teksti",
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 4`] = `
Object {
  "aloitusKuulutus": Object {
    "esitettavatYhteystiedot": Array [
      Object {
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
    },
    "kuulutusPaiva": "2022-01-02",
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta RUOTSIKSI.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/T412 Aloituskuulutus RUOTSIKSI.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "email": "Joku.Jossain@vayla.fi",
        "etunimi": "Joku",
        "kunta": "Nokia",
        "puhelinnumero": "123",
        "sukunimi": "Jossain",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "velho": Object {
        "asiatunnusVayla": "A1",
        "kunnat": Array [
          "Tampere",
          "Nokia",
        ],
        "maakunnat": Array [
          "Uusimaa",
          "Pirkanmaa",
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 5`] = `
Object {
  "aloitusKuulutus": Object {
    "esitettavatYhteystiedot": Array [
      Object {
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
    },
    "kuulutusPaiva": "2022-01-02",
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta RUOTSIKSI.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/T412 Aloituskuulutus RUOTSIKSI.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
      },
      "hyvaksyja": "A123",
      "id": 1,
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "email": "Joku.Jossain@vayla.fi",
        "etunimi": "Joku",
        "kunta": "Nokia",
        "puhelinnumero": "123",
        "sukunimi": "Jossain",
      },
      "tila": "HYVAKSYTTY",
      "velho": Object {
        "asiatunnusVayla": "A1",
        "kunnat": Array [
          "Tampere",
          "Nokia",
        ],
        "maakunnat": Array [
          "Uusimaa",
          "Pirkanmaa",
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;
